--- a/style.css
+++ b/style.css
@@ -1,172 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-* {
-  font-family: 'Space Mono', monospace;
-  box-sizing: border-box;
+/* Reset default margin and padding */
+body, h1, h2, p, ul {
+  margin: 0;
+  padding: 0;
 }
 
-body {
-  margin: 0px;
-}
-
+/* Style the header */
 header {
-  padding: 10px
-}
-
-header img {
-  width: 150px;
-}
-
-.img-css {
-  width: 100%;
-}
-
-div.scrollmenu {
-  background-color: #141414;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-div.scrollmenu::-webkit-scrollbar {
-  display: none;
-  /* for Chrome, Safari, and Opera */
-}
-
-div.scrollmenu a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
-div.scrollmenu a.active {
-  background-color: #026ccc;
-  color: white;
-  border-bottom: 2px solid white;
-}
-
-div.scrollmenu a:hover {
-  color: #ffcc00;
-}
-
-.center-content {
-  text-align: center;
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-
-.padding-left-16 {
-  padding: 10px;
-}
-
-footer {
-  text-align: center;
-  padding: 3px;
   background-color: #333;
-  color: white;
+  color: #fff;
+  padding: 20px;
 }
 
-
-/* Pay Button */
-.paybtn {
-  background-color: #026ccc;
-  border: 4px double white;
-  font-weight: bold;
-  position: relative;
-  outline: none;
-  border-radius: 50px;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  padding: 10px;
-  max-width: 800px;
-  margin: 0% 5% 0% 5%;
-  opacity: 1;
-  text-decoration: none;
-  color: white;
-  display: flex;
-}
-
-/* List */
-.title-line {
-  background-color: #141414;
-  color: white;
+/* Style the navigation menu */
+nav ul {
+  list-style-type: none;
+  background-color: #f2f2f2;
   padding: 10px;
 }
 
-#content ul {
-  list-style-image: linear-gradient(to left bottom, red, blue);
+nav ul li {
+  display: inline;
+  margin-right: 10px;
 }
 
-/* Table*/
-table.GeneratedTable {
-  width: 100%;
-  background-color: #e1f8dc;
-  border-collapse: collapse;
-  border-width: 2px;
-  border-color: #ffffff;
-  border-style: solid;
-  color: #000000;
-}
-
-table.GeneratedTable td,
-table.GeneratedTable th {
-  border-width: 2px;
-  border-color: #ffffff;
-  border-style: solid;
-  padding: 3px;
-}
-
-table.GeneratedTable thead {
-  background-color: #e1f8dc;
-}
-
-/* Gallery*/
-.Gallery {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0vw 2vw 0vw 2vw;
-}
-
-.GalleryImg {
-  max-width: 50%;
-  padding: 0 10px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.GalleryImg img {
-  width: 100%;
-  height: 100%;
-}
-
-.right-side-link {
-  text-align: right;
-  padding-right: 25px;
-  padding-top: 0px;
-  font-size: 1em;
-}
-
-.right-side-link a {
-  background-color: #141414;
-  color: white;
-  padding: 8px;
+nav ul li a {
   text-decoration: none;
-  border-radius: 2px;
-  font-weight: bold;
+  color: #333;
+  padding: 5px;
 }
 
-a {
-  text-decoration: none;
+/* Style the main content */
+main {
+  padding: 20px;
 }
 
-.timing {
-  width: 100%;
+section {
+  margin-bottom: 20px;
 }
 
-.timing th,
-td {
-  background-color: #e1f8dc;
-  padding: 3px;
+/* Style the footer */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
 }
